# rake-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: inner.rs  keyword.rs  lib.rs  metric.rs  rake.rs  stopwords.rs
tests/: keyword_test.rs  rake_test.rs  stopwords.txt  stopwords_test.rs
