[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["algorithms", "text-processing"]
description = "Rust implementation of Rapid Automatic Keyword Extraction (RAKE) algorithm"
documentation = "https://docs.rs/rake"
edition = "2024"
homepage = "https://github.com/yaa110/rake-rs"
keywords = ["rake", "algorithm", "keyword"]
license = "MIT/Apache-2.0"
name = "rake"
readme = "README.md"
repository = "https://github.com/yaa110/rake-rs"
version = "0.3.6"

[dependencies]
lazy_static = "1.5"
regex = "1.11"
serde = {version = "1", features = ["derive"]}
